--- a/src/components/SubmitButton.module.css
+++ b/src/components/SubmitButton.module.css
@@ -43,7 +43,7 @@
 
 .hint {
   margin: 0;
-  text-align: left;
+  text-align: right;
   color: #aaa;
   font-size: 0.85rem;
   font-weight: 500;
